--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,15 @@
     <title>{{datos.titulo}}</title>
 {% endblock %}
 {% block contenido %}
+{{super()}}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %} 
+            {% for message in messages %} 
+           <h1 style="color:red">{{message}}</h1> 
+            {% endfor %} 
+        {% endif %} 
+    {% endwith %} 
+
     <h1>Encabezado index</h1>
     <h2>{{datos.encabezado}}</h2>
 {% endblock %} 
