--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/estilos.css')}}">
-    {% block titulo %}
-        <title>Plantilla base</title>
-    {% endblock %}
-</head>
-<body>
-    <header>
-        <h2>Menu en Plantilla base</h2>
-        <img src="{{url_for('static',filename='img/logo.png')}}" alt="logo">
-        {% include 'includes/barranavegacion.html' %}
-    </header>
-    <section id="contenido">
-        {% block contenido %}
-            <h1>Plantilla base para Flask</h1>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CRUD Flask con MySQL 
+        {% block titulo %}
         {% endblock %}
-    </section>
-</body>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
+  <body>
+    <main>
+        
+        {% block contenido %} 
+        {% endblock %} 
+
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
