--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CRUD Flask con MySQL 
+    <title>Sesion Usuarios 
         {% block titulo %}
         {% endblock %}
     </title>
