--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,19 @@
-{% extends './base.html' %}
-{% block titulo %}
-<!-- Datos vienen del diccionario, accede con punto a la clave -->
-    <title>{{datos.titulo}}</title>
-{% endblock %}
-{% block contenido %}
-{{super()}}
-    {% with messages = get_flashed_messages() %}
-        {% if messages %} 
-            {% for message in messages %} 
-           <h1 style="color:red">{{message}}</h1> 
+{% extends './base.html' %} 
+{% block titulo %} 
+Uuario dentro
+{% endblock %} 
+{% block contenido %} 
+<section>
+    <h3>Usuario registrado</h3>
+    <p>Estas dentro</p>
+    
+    {% with mensajes_flash = get_flashed_messages() %} 
+        {% if mensajes_flash %} 
+            {% for mensaje in mensajes_flash %} 
+                <li>{{ mensaje }}</li>
             {% endfor %} 
         {% endif %} 
     {% endwith %} 
 
-    <h1>Encabezado index</h1>
-    <h2>{{datos.encabezado}}</h2>
-{% endblock %} 
+</section>
+{% endblock %}
