--- a/templates/entrar.html
+++ b/templates/entrar.html
@@ -11,8 +11,8 @@ Acceso usuario
             <input type="email" autofocus required class="form-control" name="email" id="email" placeholder="email@prueba.com">
         </div>
         <div class="mb-3">
-            <label for="contraseña" class="form-label">Contraseña</label>
-            <input type="password" required class="form-control" name="contraseña" id="contraseña" placeholder="1234">
+            <label for="clave" class="form-label">Contraseña</label>
+            <input type="password" required class="form-control" name="clave" id="clave" placeholder="1234">
         </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-outline-primary">Entrar</button>
