--- a/templates/registro.html
+++ b/templates/registro.html
@@ -5,14 +5,14 @@ Registro usuario
 {% block contenido %} 
 <section>
     <h3>Registro usuario</h3>
-    <form action="{{ url_for('guardar_usuario') }}" method="POST">
+    <form action="{{ url_for('registrar') }}" method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input type="email" autofocus required class="form-control" name="email" id="email" placeholder="email@prueba.com">
         </div>
         <div class="mb-3">
-            <label for="contraseña" class="form-label">Contraseña</label>
-            <input type="password" required class="form-control" name="contraseña" id="contraseña" placeholder="1234">
+            <label for="clave" class="form-label">Contraseña</label>
+            <input type="password" required class="form-control" name="clave" id="clave" placeholder="1234">
         </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-outline-primary">Registrar</button>
