--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,7 +3,7 @@
 Registro usuario
 {% endblock %} 
 {% block contenido %} 
-<section>
+<section class="container">
     <h3>Registro usuario</h3>
     <form action="{{ url_for('registrar') }}" method="POST">
         <div class="mb-3">
