--- a/templates/entrar.html
+++ b/templates/entrar.html
@@ -3,7 +3,7 @@
 Acceso usuario
 {% endblock %} 
 {% block contenido %} 
-<section>
+<section class="container">
     <h3>Acceso usuario</h3>
     <form action="{{ url_for('login') }}" method="POST">
         <div class="mb-3">
