--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 Uuario dentro
 {% endblock %} 
 {% block contenido %} 
-<section>
+<section class="container">
     <h3>Usuario registrado</h3>
     <p>Estas dentro</p>
     
