--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Sistema Flask</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('dentro')}}">Dentro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('entrar')}}">Acceso</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('registro')}}">Registro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('salir')}}">Salir</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <main>
         
         {% block contenido %} 
